# voice-interview-bot

./: .gitignore  Makefile  QUICK_START.md  README.md  README2.md  about.md  debug_conversation_persistence.py  debug_conversation_state.py  debug_entity_extraction.py  debug_turn_fast.py  final_summary.json  pyproject.toml  quick_demo.py  requirements.txt  results_for_personas.json  sarvam_stream_test.py  setup.py  setup_google_auth.py  test_audio_debug.py  test_bot_connection.py  test_demo.py  test_elevenlabs_asr_direct.py  test_google_asr_direct.py  test_noise_gpt.py  test_noise_wave.py  test_simple.py  utterances.yaml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  logger.py
app/models/: candidate.py  job.py
app/services/: __init__.py  conversation.py  elevenlabs_asr.py  job_matching.py  nlu.py  speech_recognition.py  (+1 more)
data/: candidates.json  jobs.json
docs/: README.md  design.md  evals.md  job_match.md
eval/: build_labels.py  synthesize.py
generated_audio/: audio_manifest.yaml
scripts/: dev.py  eval.py
static/: app.js  index.html
test_harness/: audio_generator.py  bot_tester.py  bot_tester_fixed.py  conversation_flow_tester.py  http_conversation_tester.py  http_conversation_tester_new.py  http_conversation_tester_red.py  old_test_conv.py
test_scripts/: test_complete_conversation_with_confirmation.py  test_confidence_calculation.py  test_confirmation_flow.py  test_direct_tts.py  test_elevenlabs_response.py  test_multi_turn_conversation.py  test_nlu_extraction.py  test_noise.py  test_simple_conversation.py
(+69 files in other folders)
